public enum Activity {
    savingPeople,clearingSnow,puttingOnSuit,eatingFood;

}
