public class Eskimo extends Player {

    public void buildIglu();
}
